WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278918
Fix internal Ventura build after
282945@main
https://bugs.webkit.org/show_bug.cgi?id=278918
Summary
Fix internal Ventura build after 282945@main
Alex Christensen
Reported
2024-08-30 07:17:15 PDT
rdar://135014884
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2024-08-30 07:19:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32937
EWS
Comment 2
2024-08-30 07:26:20 PDT
Committed
282966@main
(54dda47cf84c): <
https://commits.webkit.org/282966@main
> Reviewed commits have been landed. Closing PR #32937 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug