Fix internal Ventura build after 282945@main https://bugs.webkit.org/show_bug.cgi?id=278918 rdar://135014884

Unreviewed.

The open source Ventura build is fine because it uses the forward declaration in CFNetworkSPI.h.
The internal Ventura build has the symbol nw_http2_create_options in a different location in the SDK.
Since I'm away from the ability to try an internal Ventura build right now, add a forward declaration
to make the build more like the open source build.

* Source/WebKit/NetworkProcess/webtransport/cocoa/NetworkTransportSessionCocoa.mm:

Canonical link: https://commits.webkit.org/282966@main